# dj-weather-show

./: README.md  pyproject.toml
tests/: test_weather.py
